# research-assistant

./: .dockerignore  .gitignore  .model_alias.json  DOCKER_README.md  Dockerfile  Dockerfile.new  LLM.md  README.md  configure_mcp.py  docker-compose.yml  docker_test.py  entrypoint.sh  install.py  judge.py  mcp.json  pyproject.toml  run_tests_docker.sh  test_env_resolution.py
automator/: .gitignore  .ragignore  CHANGES.md  LLM.md  README.md  SSE_TRANSPORT_GUIDE.md  __init__.py  genai docs.md  pyproject.toml  pytest.ini  stdout  task.md
automator/automator/: __init__.py  agent.py  cli.py  dtypes.py  gitignore_parser.py  hooks.py  llm.py  utils.py  workspace.py
automator/automator/api/: main.py
automator/docs/: rag.md  rag_design.md
automator/examples/: aca.py  evaluator.py  load_workspace.py  message_with_image.py  oversight_hook.py  quickstart.py  rag_hook_example.py  sse_transport_example.py  subagent_example.py  test_tool_calls.py
automator/examples/rag/: __init__.py  eval.py  rag_hook_example.py  sample_eval.json
automator/frontend/: index.html  package-lock.json  package.json
automator/frontend/src/: App.tsx
automator/frontend/src/components/AppLayout/: AppLayout.css  AppLayout.tsx
automator/frontend/src/components/FileMentionInput/: FileMentionInput.tsx  mockData.ts
automator/frontend/src/contexts/: WorkspaceContext.tsx
automator/frontend/src/services/: api.ts
automator/frontend/src/styles/: global.css  theme.css
automator/frontend/src/types/: index.ts
automator/frontend/src/views/AgentManagementView/: AgentManagementView.css  AgentManagementView.tsx
automator/frontend/src/views/MainView/: MainView.css  MainView.tsx  MessageBubble.tsx  MessageInputArea.tsx  RenderContentBlock.tsx
automator/frontend/src/views/MainView/FileMentionInput/: FileMentionInput.tsx
automator/frontend/src/views/WorkspaceSelectionView/: WorkspaceSelectionView.css
automator/more_examples/: coder.py  eval_qwen3.py  evaluator.py  evalv2.py  explore_model.py  planb_setup.py  tracking3000.py
automator/prompts/: aca.yaml  alice.yaml  assistant.yaml  bob.yaml  chatgpt.yaml  codebase.yaml  dataset_creator.yaml  dataset_explorer.yaml  debator.yaml  deep_research.yaml  evaluator.yaml  expert.yaml  mcp.yaml  moderator.yaml  subagent_manager.yaml  swe.yaml  talk_to_model.yaml  tracker3000.yaml  viseval.yaml  viseval_python.yaml
automator/rag/: __init__.py  hook.py  is_ignored.py  rag.py
automator/telegram_adapter/: main.py  pyproject.toml
automator/tests/: conftest.py  test_api.py  test_comprehensive.py  test_gemini_tools.py  test_integration.py  test_llm.py  test_quickstart.py  test_rag_hook.py  test_sse_transport.py  test_system.py
automator/ui/api/: main.py
automator/ui/frontend/: index.html  tsconfig.json
automator/ui/frontend/src/: index.tsx
automator/ui/frontend/src/components/AppLayout/: AppLayout.css  AppLayout.tsx
automator/ui/frontend/src/components/CommandPalette/: CommandPalette.css  CommandPalette.tsx
automator/ui/frontend/src/styles/: theme.css
automator/ui/frontend/src/types/: index.ts
automator/ui/frontend/src/views/AgentManagementView/: AgentManagementView.tsx
automator/ui/frontend/src/views/MainView/: MainView.css  MainView.tsx  MessageBubble.tsx  MessageInputArea.tsx  RenderContentBlock.tsx
automator/ui/frontend/src/views/MainView/FileMentionInput/: FileMentionInput.module.css  FileMentionInput.tsx
automator/ui/frontend/src/views/WorkspaceSelectionView/: WorkspaceSelectionView.tsx
browser-mcp/: browser_mcp.py  pyproject.toml
demo/: env.json
demo/agents/: claude-3.7-terminal.json  gemini-terminal.json  gpt-4.1-terminal.json  o3-terminal.json
resources/apis/: anthropic.md  openai.md
resources/mcp/: annotated_content.md  context_and_logging.md  quickstart.md
squiggpy/: get_prompt.py  readme.md  squiggpy.py
talk-to-model/: README.md  models  pyproject.toml  talk_to_model.py
talk-to-model/freeform_evals/: emergent_misalignment_large.yaml
terminal-mcp/: .dockerignore  DOCKER_USAGE.md  Dockerfile  LLM.md  editor.py  entrypoint.py  find_tool.py  jupyter.py  output_manager.py  pyproject.toml  server.py  terminal.py  test_terminal.py  utils.py  yo.py
terminal-mcp/src/terminal_mcp/: __init__.py  entrypoint.py.bak  static_code_analysis.py
web-mcp/: pyproject.toml  web.py
