[project]
name = "automator"
version = "0.1.0"
description = "MCP-based LLM agent system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pyyaml>=6.0.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.34.2",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
    "ipython>=9.2.0",
    "jupyterlab>=4.4.2",
    "pandas>=2.2.3",
    "matplotlib>=3.10.3",
    "watchdog>=6.0.0",
    "localrouter>=0.1.1",
    "isignored>=0.1.0",
]

[project.optional-dependencies]
sse = [
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
ra = "automator.cli:main"
[tool.setuptools]
packages = ["automator"]

[tool.uv.workspace]
members = [
    "telegram_adapter",
]
