[project]
name = "automator"
version = "0.1.0"
description = "MCP-based LLM agent system with optional RAG integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pyyaml>=6.0.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.34.2",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
    "ipython>=9.2.0",
    "jupyterlab>=4.4.2",
    "pandas>=2.2.3",
    "matplotlib>=3.10.3",
    "watchdog>=6.0.0",
    "localrouter>=0.2.0",
    "isignored>=0.1.1",
]

[project.optional-dependencies]
ui = [
    # Frontend dependencies (npm/node handled separately)
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

rag = [
    "openai>=1.84.0",
    "pydantic>=2.11.5",
    "tiktoken>=0.9.0",
    "numpy>=2.2.6",
]

all = ["automator[ui,dev,rag]"]

sse = [
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
ra = "automator.cli:main"

[tool.setuptools]
packages = ["automator", "rag"]

[tool.uv.workspace]
members = [
    "telegram_adapter",
]
