[project]
name = "talk-to-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "openai>=1.76.0",
    "pyyaml>=6.0.2",
    "openweights>=0.2.0",
    "slugify>=0.0.1",
    "pandas>=2.2.3",
    "vibes-eval>=0.1.0",
]
