[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talk-to-model"
version = "0.1.0"
description = "A simple talk-to-model MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "localrouter",
    "vibes-eval",
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["src"]