[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-mcp"
version = "0.1.0"
description = "A simple terminal MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "jupyterlab>=4.4.2",
    "pandas>=2.2.3",
    "matplotlib>=3.10.3",
    "watchdog>=6.0.0",
    "isignored>=0.1.1",
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["src"]