[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-mcp"
version = "0.1.0"
description = "A simple web MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "beautifulsoup4",
    "duckduckgo-search",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["src"]